css/main.css
*{
    box-sizing: border-box;
}

html{
     margin:0;
     /* fonts */
}

body{
    margin:0;
}

header {
    width: 100%;
    height: 63px;
    background-color: #222;
    justify-content: space-around;
    align-items: center;
}

header button{
    background-color: #222;
    border:solid 1px rgb(168, 156, 156);
    color: rgb(168, 156, 156);
    font-size:1.4em;
    cursor:pointer;
}

img{
    width: 100px;
    height: 100px;
    margin:0 10px;
}

img.portrait{
    align-self:center;
    width: 100px;
    height: 100px;
}


/* helpers  */

.clean-list{
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.flex{
    display: flex; 
}

.column{
    flex-direction: column;
}


/*  classes */


.nav{
    display:none;
}

.meme-container{
    justify-content: space-evenly;
    flex-wrap: wrap;    
}

.meme-container img{
    margin:10px 0;
}

.tags{
    justify-content: space-around;
    align-items:center;
    background-color: orange;
    height: 150px;/*temp need to make it pixel perfect*/

}

.tags li{
    cursor: pointer;
}

.tags li:hover{
    color:grey;
    cursor: pointer;
}

.about{
    justify-content: center;
    align-items: center;
    background-color: aquamarine;
    height: 350px; /*temp need to make it pixel perfect*/
}


.contact{
    background-color: blue;
    height: 90px;
}

.hidden {
    display:none;
}

.back-to {
    margin-bottom: 20px;
    justify-content: space-between;
}

.back-text, .download-text {
    width: 90%;
    margin: 0;
    height: 50px;
    line-height: 50px;
    background-color: #2da;
    text-align: center;
}

.arrow {
    line-height: 50px;
    text-align: center;
    width: 10%;
    background-color: orange;
}

.canvas-container {
    border: 1px black solid;
    width: 100%;
    height:300px;
    background-color: #555;
    margin-bottom: 20px;
    justify-content: center;
    align-content: center;
}



.editor.flex {
    flex-direction: column;
    padding: 20px;
    background-color: #555;
}

.editing.options {
    background-color: #999;
    flex-direction: column;
    align-items: center;

    margin-bottom: 20px;

}

.editing input {
    width: 100%;
}

.editing .buttons {
    width: 100%;
}


.editing button {
    height: 30px;
    width: 20%;
}

